--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "my_online_school"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.2.7"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
