Подключена база данных. Внесены настройки в settings.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "my_online_school"}]
 python = "^3.11"
 django = "^4.2.7"
 djangorestframework = "^3.14.0"
+python-dotenv = "^1.0.0"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
