--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django = "^4.2.7"
 djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.9"
+pillow = "^10.1.0"
 
 
 [build-system]
