--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 psycopg2-binary = "^2.9.9"
 pillow = "^10.1.0"
+django-filter = "^23.3"
 
 
 [build-system]
