--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.9"
 pillow = "^10.1.0"
 django-filter = "^23.3"
 djangorestframework-simplejwt = "^5.3.0"
+coverage = "^7.3.2"
 
 
 [build-system]
