--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pillow = "^10.1.0"
 django-filter = "^23.3"
 djangorestframework-simplejwt = "^5.3.0"
 coverage = "^7.3.2"
+drf-yasg = "^1.21.7"
 
 
 [build-system]
