--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ django-filter = "^23.3"
 djangorestframework-simplejwt = "^5.3.0"
 coverage = "^7.3.2"
 drf-yasg = "^1.21.7"
+stripe = "^7.5.0"
+requests = "^2.31.0"
 
 
 [build-system]
